--- a/mdvrset/src/main/res/layout/activity_option.xml
+++ b/mdvrset/src/main/res/layout/activity_option.xml
@@ -6,25 +6,36 @@
     android:background="#FFF"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activity.SelectActivity"
     tools:ignore="MissingDefaultResource">
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="60dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/def_button"
         android:onClick="md201"
-        android:text="MD201" />
+        android:text="MD201"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="60dp"
-        android:onClick="md600"
-        android:text="MD600" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/def_button"
         android:onClick="md600"
         android:text="MD600"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
+    <Button
+        android:layout_width="220dp"
+        android:layout_height="60dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/def_button"
+        android:onClick="md600"
+        android:text="MD600"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         android:visibility="invisible" />
 </LinearLayout>
