--- a/mdvrset/src/main/res/layout/fragment_adasset.xml
+++ b/mdvrset/src/main/res/layout/fragment_adasset.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
+            android:backgroundTint="@color/black"
             android:entries="@array/spinnerchannelnum"
             android:minWidth="120dp" />
 
