--- a/mdvrset/src/main/res/values/themes.xml
+++ b/mdvrset/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Theme.Noactionbar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Noactionbar" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
