--- a/mdvrset/src/main/res/values/arrays.xml
+++ b/mdvrset/src/main/res/values/arrays.xml
@@ -122,4 +122,11 @@
         <item>left rear</item>
         <item>center front</item>
     </string-array>
+
+    <string-array name="bsdcamerachanenl">
+        <item>前BSD通道</item>
+        <item>后BSD通道</item>
+        <item>左BSD通道</item>
+        <item>右BSD通道</item>
+    </string-array>
 </resources>
