--- a/mdvrset/src/main/res/layout/activity_arcsoftset.xml
+++ b/mdvrset/src/main/res/layout/activity_arcsoftset.xml
@@ -20,33 +20,6 @@
         android:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/adas_view_ll"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/adas_cali_im"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/bar_choise_item_height"
-                android:layout_marginTop="@dimen/bar_choise_item_margin_top"
-                android:gravity="center"
-                android:src="@drawable/ic_shezhi_press" />
-
-            <TextView
-                android:id="@+id/adas_cali_tv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/bar_content_item_margin"
-                android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
-                android:gravity="center"
-                android:text="@string/adas_settings"
-                android:textColor="@color/menu_text_on"
-                android:textSize="10sp" />
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/adas_setting_view_ll"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -59,7 +32,7 @@
                 android:layout_height="@dimen/bar_choise_item_height"
                 android:layout_marginTop="@dimen/bar_choise_item_margin_top"
                 android:gravity="center"
-                android:src="@drawable/ic_shezhi_normal" />
+                android:src="@drawable/ic_shezhi_press" />
 
             <TextView
                 android:id="@+id/adas_setting_tv"
@@ -68,7 +41,61 @@
                 android:layout_marginTop="@dimen/bar_content_item_margin"
                 android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
                 android:gravity="center"
+                android:text="@string/adas_settings"
+                android:textColor="@color/menu_text_on"
+                android:textSize="10sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/bsd_setting_view_ll"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/bsd_setting_im"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bar_choise_item_height"
+                android:layout_marginTop="@dimen/bar_choise_item_margin_top"
+                android:gravity="center"
+                android:src="@drawable/ic_shezhi_normal" />
+
+            <TextView
+                android:id="@+id/bsd_setting_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/bar_content_item_margin"
+                android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
+                android:gravity="center"
                 android:text="@string/bsd_settings"
+                android:textColor="@color/menu_text_off"
+                android:textSize="10sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dms_setting_view_ll"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/dms_setting_im"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bar_choise_item_height"
+                android:layout_marginTop="@dimen/bar_choise_item_margin_top"
+                android:gravity="center"
+                android:src="@drawable/ic_shezhi_normal" />
+
+            <TextView
+                android:id="@+id/dms_setting_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/bar_content_item_margin"
+                android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
+                android:gravity="center"
+                android:text="@string/dms_settings"
                 android:textColor="@color/menu_text_off"
                 android:textSize="10sp" />
         </LinearLayout>
