--- a/mdvrset/src/main/res/layout/activity_arcsoftset.xml
+++ b/mdvrset/src/main/res/layout/activity_arcsoftset.xml
@@ -51,8 +51,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="invisible">
+            android:visibility="visible"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/bsd_setting_im"
