--- a/mdvrset/src/main/res/values-zh-rCN/arrays.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/arrays.xml
@@ -116,10 +116,10 @@
     </string-array>
 
     <string-array name="bsdcameradirection">
-        <item>平视（右后）</item>
-        <item>平视（左前）</item>
-        <item>平视（右前）</item>
-        <item>平视（左后）</item>
+        <item>平视(右后)</item>
+        <item>平视(左前)</item>
+        <item>平视(右前)</item>
+        <item>平视(左后)</item>
         <item>俯视</item>
     </string-array>
 
