MD600 ADAS/DMS Version

--- a/mdvrset/src/main/res/layout/dialog_adsa_edit.xml
+++ b/mdvrset/src/main/res/layout/dialog_adsa_edit.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <EditText
@@ -20,6 +21,7 @@
         android:gravity="center"
         android:inputType="numberSigned"
         android:paddingTop="10dp"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <LinearLayout
